helm-file/artifactory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artifactory
  namespace: tools
  labels:
    app: artifactory
spec:
  ingressClassName: nginx
  rules:
  - host: "tooling-artifactory.fnc.dns-dynamic.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: artifactory
            port:
              number: 8082
